<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivScan"
                android:layout_width="@dimen/value_50dp"
                android:layout_height="@dimen/value_50dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/scan"
                android:src="@drawable/qr_code_scan"
                app:layout_constraintEnd_toStartOf="@+id/ivPay"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivPay"
                android:layout_width="@dimen/value_50dp"
                android:layout_height="@dimen/value_50dp"
                android:src="@drawable/payment"
                app:layout_constraintBottom_toBottomOf="@+id/ivScan"
                app:layout_constraintEnd_toStartOf="@+id/ivTransfer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivScan"
                app:layout_constraintTop_toTopOf="@+id/ivScan"
                android:contentDescription="@string/pay" />

            <ImageView
                android:id="@+id/ivTransfer"
                android:layout_width="@dimen/value_50dp"
                android:layout_height="@dimen/value_50dp"
                android:src="@drawable/bank_transfer"
                app:layout_constraintBottom_toBottomOf="@+id/ivPay"
                app:layout_constraintEnd_toStartOf="@+id/ivAccount"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivPay"
                app:layout_constraintTop_toTopOf="@+id/ivPay"
                android:contentDescription="@string/transfer" />

            <ImageView
                android:id="@+id/ivAccount"
                android:layout_width="@dimen/value_50dp"
                android:layout_height="@dimen/value_50dp"
                android:src="@drawable/bank_account"
                app:layout_constraintBottom_toBottomOf="@+id/ivTransfer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivTransfer"
                app:layout_constraintTop_toTopOf="@+id/ivTransfer"
                android:contentDescription="@string/account" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/scan"
                app:layout_constraintEnd_toEndOf="@+id/ivScan"
                app:layout_constraintStart_toStartOf="@+id/ivScan"
                app:layout_constraintTop_toBottomOf="@+id/ivScan" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pay"
                app:layout_constraintEnd_toEndOf="@+id/ivPay"
                app:layout_constraintStart_toStartOf="@+id/ivPay"
                app:layout_constraintTop_toBottomOf="@+id/ivPay" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/transfer"
                app:layout_constraintEnd_toEndOf="@+id/ivTransfer"
                app:layout_constraintStart_toStartOf="@+id/ivTransfer"
                app:layout_constraintTop_toBottomOf="@+id/ivTransfer" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/account"
                app:layout_constraintEnd_toEndOf="@+id/ivAccount"
                app:layout_constraintStart_toStartOf="@+id/ivAccount"
                app:layout_constraintTop_toBottomOf="@+id/ivAccount" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/trendingOffersViewPager"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/recommend"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trendingOffersViewPager" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/more"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trendingOffersViewPager" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTopFunds"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHotNews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerTopFunds" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>